--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,9 @@ knit: (function(inputFile, encoding) {
       out_dir <- "docs";
       rmarkdown::render(inputFile,
                         encoding=encoding,
-                        output_dir=file.path(dirname(inputFile), out_dir))})
+                        output_dir=file.path(dirname(inputFile), out_dir),
+                        params = list(title = "Jacob R. Smith"))
+})
 output: html_document
 ---
 
