--- a/research.Rmd
+++ b/research.Rmd
@@ -13,12 +13,13 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```
 
-## **Progressive Era Whiskey Market Data Collection Project**
+## Dissertation Research
 
-Currently collecting data on whiskey gauged between 1880-1920 from the [Report of the Commissioner of Internal Revenue](https://catalog.hathitrust.org/Record/000500840) for my working paper, *Distillers and Chemists: Strategic use of the Bottled-In-Bond Act of 1897 by both firms and regulators:*
+The purpose of my dissertation is to explore three distinct but related facets of how policy shapes and is shaped by individual and institutional behavior when the stakes involve credibility, safety, welfare, and freedom.
 
-|       "The Bottled-In-Bond Act of 1897 (BiB), one of the first consumer protection regulations in the United States, is commonly thought to safeguard consumers from harmful whiskey makers and adulterated whiskey, which were allegedly common practices in the late 19^th^ and early 20^th^ century. The BiB restricted the labeling of whiskey bottles and attempted to guarantee the quality of liquor. While there is no evidence of any consumer being harmed from adulterated or rectified whiskey, alternative explanations for the BiB are wanting.
-|       Contrary to common wisdom, the BiB served a combination of private interests, namely, incumbent aged whiskey distillers and federal regulators. Aged whiskey distillers took advantage of the labeling rules imposed by the BiB in their advertisements, which conveyed signals of quality and credibility from a government authority, e.g., green bottled-in-bond stamps. Fear and uncertainty, combined with public exhibitions and expert statements to promote Bottled-In-Bond whiskey, were cited in advertisements by aged whiskey distillers to shift consumer preferences away from rectified whiskey and towards aged whiskey. Government officials were incentivized to promote bottled-in-bond whiskey and promulgate concern about adulterants in rectified whiskey in order to expand their bureau and secure additional appropriations. I will outline relevant economic theory on rent seeking and market uncertainty and apply it to the Progressive Era whiskey market. I will then show historical evidence of both specific firms and regulators attempting to promulgate consumer uncertainty over quality and reaping the benefits of assuaging consumers' fear. "
+The first chapter, adapted from my working paper “The Father of Food and Drug Law as Strategic Regulator: Dr. Harvey Wiley and the Political Economy of the Bottled-in-Bond Act of 1897,” examines the origins of one of the earliest federal consumer-protection statutes. Using archival correspondence, congressional testimony, and newly digitized distillery records, I show how Dr. Harvey Wiley and the USDA Bureau of Chemistry strategically framed the 1897 Act as a pure public-health measure while simultaneously designing costly bonding and labeling requirements to favor large, established distillers who lobbied for the law and to expand the Bureau’s own jurisdiction. The chapter illustrates a classic Bootleggers-and-Baptists coalition long before the modern administrative state, demonstrating that even “Progressive Era” regulation was often captured from day one.
+
+|       "The Bottled-in-Bond Act of 1897 (BiB) is often framed as one of the earliest consumer protection laws in the United States. Traditionally, it is seen as a measure to safeguard consumers from harmful whiskey adulteration. However, a public choice interpretation suggests that BiB served the interests of both incumbent aged whiskey distillers and federal regulators. Dr. Harvey Wiley, the head of the Bureau of Chemistry, played a central role in legitimizing and enforcing this regulation, expanding the power of his bureau while assisting straight whiskey distillers in their battle against rectifiers. Distillers often quoted statements made by Dr. Wiley in their advertisements to make appeals to authority that their competitors were not eligible to make. This paper reinterprets the BiB through the lens of regulatory capture, examining Wiley’s role as a strategic regulator who used the Act to cement his influence in federal food and drug policy."
 
 ------------------------------------------------------------------------
 
