--- a/index.Rmd
+++ b/index.Rmd
@@ -13,42 +13,45 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 ```
 
-<div style="display:flex;">
-
+:::: {style="display:flex;"}
 ```{r profile_pic, echo=FALSE, out.width='200px', results='asis'}
 cat('<img src="images/profile.jpg" alt="" style="width:500px;height:auto;border-radius:50%;box-shadow:0 0 10px rgba(0, 0, 0, 0.3);">')
 ```
 
-<div style="margin-left:20px;">
+::: {style="margin-left:20px;"}
+Welcome to my corner of the web! I'm Jacob Smith, a third-year Economics Ph.D. candidate at Middle Tennessee State University and a Graduate Research Fellow with MTSU's Political Economy Research Institute (PERI). With a strong background in applied microeconomics and public choice theory, my research focuses on historical political economy, public interest regulation, and economic freedom.
 
-Welcome to my corner of the web! I'm Jacob Smith, a first-year Economics Ph.D. student at Middle Tennessee State University. I am currently researching the early American whiskey market. My political economy interests include free market, public choice, rent seeking, special interests, and collective action problems.
+On this website, you'll find a glimpse into my academic journey, including details about the courses I have taught, current research projects, and working papers.
+:::
+::::
 
-On this website, you'll find a glimpse into my academic journey, including details about my current research projects and working papers. One such project, "Distillers and Chemists: Strategic use of the Bottled-In-Bond Act of 1897 by both firms and regulators," delves into the intricate interplay between industry and regulation, shedding light on historical strategies that continue to shape modern economic landscapes.
+### Research Interests
 
-</div>
-</div> 
-
-### Research Projects
-
-1.  Progressive Era Whiskey Market Data Collection Project
-2.  Data collection for developing project: "Bank Runs, Contagion, and Mitigation Measures in the United States, 1850-1950”
+Historical Political Economy, Public Choice Theory, Austrian Economics, Public Interest Regulation
 
 ### Working Papers
 
-1.  Smith, Jacob. *Distillers and Chemists: Strategic use of the Bottled-In-Bond Act of 1897 by both firms and regulators*
+“The Father of Food and Drug Law as Strategic Regulator: Dr. Harvey Wiley and the Political Economy of the Bottled-In-Bond Act”
+
+“Bank Runs without a Cause: Frequency, Contagion, and Mitigation Measures in the U.S., 1889-1929”
+
+“Alms and Ale: A Malthusian Test of Welfare Generosity and Alcohol Consumption in OECD Countries, 1995–2023”
+
+“Assuring Consumers of Authenticity, Safety, & Quality in Early American Whiskey Markets”
 
 ### About Me
 
-I am currently a graduate teaching assistant and first-year Ph.D. student in Economics at Middle Tennessee State University's Jones College of Business. I'm also proud to have been selected as a Summer 2024 Fellow with MTSU's esteemed Political Economy Research Institute (PERI), where I have had the privilege of collaborating with leading scholars to tackle pressing economic and policy issues.
+I am currently a graduate teaching assistant and third-year Ph.D. student in Economics at Middle Tennessee State University's Jones College of Business. I'm also proud to have been selected as a Summer 2024 and 2025 Fellow with MTSU's Political Economy Research Institute (PERI), where I have had the privilege of collaborating with leading scholars to tackle pressing economic and policy issues.
 
-My academic journey began at Hampden-Sydney College, where I graduated Magna Cum Laude in 2023 with a Bachelor of Science in Mathematical Economics and a second major in Philosophy. This multidisciplinary foundation has equipped me with a diverse toolkit and a holistic perspective that I bring to my research and teaching endeavors.
+My academic journey began at Hampden-Sydney College, where I graduated Magna Cum Laude in 2023 with a Bachelor of Science in Mathematical Economics and a second major in Philosophy. This multidisciplinary foundation has equipped me with a diverse toolkit and a holistic perspective that I bring to my teaching and research endeavors.
 
 -   [C.V.](cv.html)
+-   [Teaching](teaching.html)
 -   [Research](research.html)
 
 ### Contact Information
 
-Whether you're a fellow researcher, a curious student, or someone passionate about economic issues, I'd love to connect and explore opportunities for collaboration and discussion. Feel free to reach out via LinkedIn or drop me an email. Let's embark on this journey together and unlock new insights into the fascinating world of economics.
+Whether you're a fellow researcher, a curious student, or someone passionate about economic issues, I'd love to connect and explore opportunities for collaboration and discussion. Feel free to reach out via LinkedIn or drop me an email.
 
 -   **LinkedIn:** [Find My Profile Here](https://www.linkedin.com/in/jacobsmithr)
 -   **Email:** [jacob.rand.smith\@gmail.com](mailto:jacob.rand.smith@gmail.com)
